update index page and create second page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,8 +9,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="js/script.js"></script>
 </head>
+
 <!-- CALL THE FUNCTION FROM JS FILE TO AUTO-TYPE TITLE -->
-<body onload="typeWriter()">
+<body id="index" onload="typeWriter()">
     <div class="container">
         <div class="header">
             <a href="index.html">
@@ -20,9 +22,9 @@
         </div>
         <div class="row">
             <div class="column">
-                <h2>NEVER BE AFRAID your information get into wrong hands!</h2>
-                <h3>Learn how to stay safe online by creating STRONG PASSWORDS right here.</h3>
-                <button class="start" onclick="window.location.href='pages/signup.html';">Let's Start</button>
+                <h2><span class="bold">NEVER BE AFRAID</span> your information get into wrong hands!</h2> <br>
+                <h3>Learn how to stay safe online by creating <span class="bold">STRONG PASSWORDS</span> right here.</h3>
+                <button class="start" onclick="window.location.href='pages/signup.html';">FIND OUT MORE</button>
             </div>
             <div class="column">
                 <img src="img/background.jpg" alt="Someone typing credentials">
@@ -30,4 +32,5 @@
         </div>
     </div>
 </body>
+
 </html>
