finish the second page

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -28,49 +28,50 @@
                 <h2>Facts about passwords</h2>
                 <table class="features">
                     <tr>
-                        <td class="red">
-                            <p>Our MCH service includes
+                        <td class="orange">
+                            <p>What is a strong password? <br><br>
                             <ul>
-                                <li>Antenatal Care</li>
-                                <li>Attended Delivery/Labor</li>
-                                <li>Child Immunization</li>
+                                <li>Is one you can’t guess or crack using a brute force attack</li>
+                                <li>Consists of a combination of uppercase and lowercase letters, numbers and special symbols, such as punctuation</li>
+                                <li>Is at least 12 characters long</li>
+                                <li>Doesn't contain memorable keyboard paths</li>
+                                <li>Is not based on your personal information</li>
+                                <li>Is unique for each account you have</li>
                             </ul>
                             </p>
                         </td>
                         <td class="blue">
-                            <p> To be able to provide the appropriate health service, we conduct periodic
-                                survey in the communities we serve. Data from such studies are analyzed to
-                                help
-                            <ol>
-                                <li>Understand the health status of each community.</li>
-                                <li>Identify prevalent issues in each locality</li>
-                                <li>Identify individuals who may be at risk for certain illness</li>
-                            </ol>
+                            <p> A long password is a good password <br><br>
+                                When it comes to password security, length really 
+                                does matter. We recommend opting for a password that’s at least 12 characters long,
+                                even longer if you can. Each additional symbol in a password exponentially increases 
+                                the number of possible combinations. This makes passwords over a certain length 
+                                essentially uncrackable, assuming you’re not using common phrases. 
                             </p>
                         </td>
-                        <td class="green">
-                            <p>
-                                We offer the following general and specialty clinics - some of which are
-                                free.
-                            <ul>
-                                <li>Medical sreening </li>
-                                <li>Dental screening and cleaning.</li>
-                                <li>Health education and promotion</li>
-                                <li>Mobile eye clinic</li>
-                            </ul>
+                        <td class="blue">
+                            <p> Password strength isn’t personal <br><br> 
+                                It’s really important that you don’t use anything 
+                                personal to you, like a nickname, your date of birth or your pet’s name. This is 
+                                information that’s really easy for a hacker to find out simply by looking at your 
+                                social media, finding your online work profile or even just by listening in on a 
+                                conversation you’re having with someone else.
                             </p>
                         </td>
-                        <td class="yellow">
-                            <p>Please use the information below to connect with us. <br /><b>Address:</b>
-                                1111 Some Streetname, Accra-Ghana. <br /><b>Tel:</b> (+233) 111-222-3333
-                                <br />
-                                Click to follow us on
-                                <a href="https://www.facebook.com/ko.fi.3557">Facebook</a>;
-                                <a href="https://codepen.io/kadutwum/pen/rOMqyq?editors=110">CodePen</a>.
+                        <td class="orange">
+                            <p> Avoid past passwords <br><br>
+                                It’s also really important to make sure you don’t recycle your passwords, 
+                                particularly if they’ve been hacked before. This may seem obvious, but once 
+                                you’ve used a password, you shouldn’t reuse it. Even if you haven’t used it 
+                                for years, it’s best to come up with a new one. Especially if you’ve had issues 
+                                with a password being hacked in the past.
                             </p>
                         </td>
                     </tr>
                 </table>
+                <div id="nextpage">
+                    <button class="start" onclick="window.location.href='pages/steps.html';">LET'S CREATE A STRONG PASSWORD NOW</button>
+                </div>
                 <div class="footer">
                     <p class="links">
                         More information:
