--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <!-- CALL THE FUNCTION FROM JS FILE TO AUTO-TYPE TITLE -->
 <body id="index" onload="typeWriter()">
-    <div class="container">
+    
+    <div class="content">
         <div class="header">
             <a href="index.html">
                 <img src="img/logo-small.png" alt="CSP logo">
@@ -20,17 +21,19 @@
             <h1 id="title">
             </h1> 
         </div>
+
         <div class="row">
             <div class="column">
                 <h2><span class="bold">NEVER BE AFRAID</span> your information get into wrong hands!</h2> <br>
                 <h3>Learn how to stay safe online by creating <span class="bold">STRONG PASSWORDS</span> right here.</h3>
-                <button class="start" onclick="window.location.href='pages/signup.html';">FIND OUT MORE</button>
+                <button onclick="window.location.href='pages/intro.html'">FIND OUT MORE</button>
             </div>
             <div class="column">
                 <img src="img/background.jpg" alt="Someone typing credentials">
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
